--- a/invoice/templates/invoice/invoice_list.html
+++ b/invoice/templates/invoice/invoice_list.html
@@ -315,7 +315,7 @@
                   </div>
               
                   <div style="padding-bottom: 18px;">Clients Email<br/>
-                      <input  type="text" id="client_email" name="client_email" style="" class="form-control"/>
+                      <input  type="email" id="client_email" name="client_email" style="" class="form-control"/>
                   </div>
               
                   <div style="padding-bottom: 18px;">Street Address<br/>
